--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,173 @@
     android:orientation="vertical"
     android:id="@+id/dl_drawerlayout"
     tools:context=".MainActivity">
-    <include
-        android:id="@+id/main1"
-        layout="@layout/bottom" />
+    <!--<include-->
+        <!--android:id="@+id/main1"-->
+        <!--layout="@layout/bottom" />-->
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+
         tools:ignore="Suspicious0dp">
 
+        <LinearLayout
+
+            android:id="@+id/bottom_layout"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="bottom"
+            android:background="@android:color/background_light">
+
+
+            <RelativeLayout
+                android:id="@+id/message_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/message_image"
+                        android:layout_width="76dp"
+                        android:layout_height="31dp"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/coffee" />
+
+                    <TextView
+                        android:id="@+id/message_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="咖啡"
+                        android:textColor="#82858b" />
+                </LinearLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/contacts_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/contacts_image"
+                        android:layout_width="75dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/yingliao" />
+
+                    <TextView
+                        android:id="@+id/contacts_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="饮料"
+                        android:textColor="#82858b" />
+                </LinearLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/news_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/news_image"
+                        android:layout_width="79dp"
+                        android:layout_height="33dp"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/pijiu" />
+
+                    <TextView
+                        android:id="@+id/news_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="啤酒"
+                        android:textColor="#82858b" />
+                </LinearLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/setting_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/setting_image"
+                        android:layout_width="83dp"
+                        android:layout_height="31dp"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/my" />
+
+                    <TextView
+                        android:id="@+id/setting_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="我的"
+                        android:textColor="#82858b" />
+                </LinearLayout>
+            </RelativeLayout>
+            <!--<RelativeLayout-->
+            <!--android:id="@+id/my"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1">-->
+
+            <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:orientation="vertical">-->
+
+            <!--<ImageView-->
+            <!--android:id="@+id/mian_menu"-->
+            <!--android:layout_width="83dp"-->
+            <!--android:layout_height="31dp"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:src="@drawable/test2" />-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/my_text"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:text="更多"-->
+            <!--android:textColor="#82858b" />-->
+            <!--</LinearLayout>-->
+            <!--</RelativeLayout>-->
+        </LinearLayout>
+
     </FrameLayout>
+
 
     <android.support.design.widget.NavigationView
     android:id="@+id/nav_view"
