--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ed1573</color>
+    <color name="textcolor_red">#ff0000</color>
+    <color name="color_loginout">#ffd400</color>
+    <color name="color_green">#23f332</color>
+    <color name="color_top_youth">#2291e6</color>
 </resources>
