--- a/app/src/main/res/layout/fragment_new.xml
+++ b/app/src/main/res/layout/fragment_new.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewFragment">
+    android:layout_marginBottom="60dp"
+    tools:context=".Fragment.NewFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/collect_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="60dp" />
+        android:layout_height="match_parent" />
 </FrameLayout>
