--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/dl_drawerlayout"
-    tools:context=".MainActivity">
+    tools:context=".Activity.MainActivity">
     <!--<include-->
         <!--android:id="@+id/main1"-->
         <!--layout="@layout/bottom" />-->
@@ -44,7 +44,7 @@
                         android:layout_width="76dp"
                         android:layout_height="31dp"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/coffee" />
+                        android:src="@drawable/message_img" />
 
                     <TextView
                         android:id="@+id/message_text"
@@ -52,7 +52,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="咖啡"
-                        android:textColor="#82858b" />
+                        android:textColor="@drawable/message_text" />
                 </LinearLayout>
             </RelativeLayout>
 
@@ -73,7 +73,7 @@
                         android:layout_width="75dp"
                         android:layout_height="32dp"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/yingliao" />
+                        android:src="@drawable/contact_img" />
 
                     <TextView
                         android:id="@+id/contacts_text"
@@ -81,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="饮料"
-                        android:textColor="#82858b" />
+                        android:textColor="@drawable/contack_text" />
                 </LinearLayout>
             </RelativeLayout>
 
@@ -102,7 +102,7 @@
                         android:layout_width="79dp"
                         android:layout_height="33dp"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/pijiu" />
+                        android:src="@drawable/new_img" />
 
                     <TextView
                         android:id="@+id/news_text"
@@ -110,7 +110,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="啤酒"
-                        android:textColor="#82858b" />
+                        android:textColor="@drawable/new_text" />
                 </LinearLayout>
             </RelativeLayout>
 
@@ -131,7 +131,7 @@
                         android:layout_width="83dp"
                         android:layout_height="31dp"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/my" />
+                        android:src="@drawable/setting_img" />
 
                     <TextView
                         android:id="@+id/setting_text"
@@ -139,37 +139,10 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="我的"
-                        android:textColor="#82858b" />
+                        android:textColor="@drawable/setting_text" />
                 </LinearLayout>
             </RelativeLayout>
-            <!--<RelativeLayout-->
-            <!--android:id="@+id/my"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1">-->
 
-            <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:orientation="vertical">-->
-
-            <!--<ImageView-->
-            <!--android:id="@+id/mian_menu"-->
-            <!--android:layout_width="83dp"-->
-            <!--android:layout_height="31dp"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:src="@drawable/test2" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/my_text"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:text="更多"-->
-            <!--android:textColor="#82858b" />-->
-            <!--</LinearLayout>-->
-            <!--</RelativeLayout>-->
         </LinearLayout>
 
     </FrameLayout>
