--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -4,19 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="60dp"
-    tools:context=".MessageFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".Fragment.MessageFragment">
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-
-
-
-    />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/foodRecycleview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
