一波大的更新，有基础的添加购物车功能，弹窗功能，待完善其他功能

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="color_top_youth">#2291e6</color>
     <color name="color_black">#85000000</color>
     <color name="color_huise">#82858b</color>
+    <color name="white">#ffffff</color>
 
 </resources>
