--- a/app/src/main/res/layout/fragment_set.xml
+++ b/app/src/main/res/layout/fragment_set.xml
@@ -49,11 +49,19 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:src="@drawable/caidan" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/pic_recycleview"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/sw_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="40dp" >
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/pic_recycleview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 </FrameLayout>
