--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,100 @@
     <color name="color_huise">#82858b</color>
     <color name="white">#ffffff</color>
 
+    <color name="activity_bg_color">#fafafa</color>
+    <color name="title_bg_color">#EC3624</color>
+    <color name="border_clo">#ccc</color>
+    <color name="btn_connect">#738aff</color>
+    <color name="init_title">#333333</color>
+    <color name="main_line_color">#c2c2c2</color>
+    <color name="login_forgotpwd_color">#aaaaaa</color>
+    <color name="login_forgotpwd_pnum_color">#F4584E</color>
+    <color name="textcolor_nomal">#000000</color>
+    <color name="textcolor_red">#ff0000</color>
+    <color name="text_7777_color">#777777</color>
+
+    <color name="bg_app">#F1F1F1</color>
+    <color name="color_vote">#fcb900</color>
+
+    <color name="school_true">#d0d4eb</color>
+    <color name="dark">#FF222222</color>
+    <color name="tab_unselect">#c9c9c9</color>
+    <color name="bg_btn">#dadada</color>
+    <color name="color_hint">#b2bbd3</color>
+    <color name="color_loginouts">#ffd400</color>
+    <color name="color_stu_info">#dce2f2</color>
+    <color name="bg_public">#32ffffff</color>
+    <color name="bg_personinfo">#ffffff</color>
+    <color name="btn_card_color">#38346d</color>
+    <color name="btn_update_color">#383473</color>
+    <color name="tx_update_color">#dce2f2</color>
+    <color name="color_355499">#355499</color>
+    <color name="color_10ffffff">#10ffffff</color>
+    <color name="color_20ffffff">#20ffffff</color>
+    <color name="color_d57070">#d57070</color>
+    <color name="color_738aff">#738aff</color>
+    <color name="transparent">#00000000</color>
+    <color name="color_white">#fff</color>
+    <color name="color_143a8a">#143a8a</color>
+    <color name="shadows">#50000000</color>
+    <color name="color_657caa">#657caa</color>
+    <color name="coloe_2bbcba">#2bbcba</color>
+    <color name="translucent_background">#40000000</color>
+    <color name="color_276b9f">#276b9f</color>
+    <color name="color_383473">#383473</color>
+    <color name="color_97abd9">#97abd9</color>
+    <color name="color_37579c">#37579c</color>
+    <color name="color_reds">#f27676</color>
+    <color name="color_pink">#ec3eea</color>
+    <color name="color_orange">#f0a421</color>
+    <color name="color_yellow">#dde32c</color>
+    <color name="color_olivine">#9cde2a</color>
+    <color name="color_greens">#23f332</color>
+    <color name="color_blue">#48bdd2</color>
+    <color name="color_tx_wish">#ffffff</color>
+    <color name="color_pop">#dd000000</color>
+    <color name="color_b5beb6">#b5beb6</color>
+    <color name="color_more_app_webview_text_background">#838b9e</color>
+    <color name="color_more_app_webview_img_background">#26ffffff</color>
+    <color name="color_emegencytext">#d57070</color>
+    <color name="color_emegency_background">#fffae1</color>
+    <color name="color_85000000">#85000000</color>
+    <color name="alpha_white">#85000000</color>
+    <color name="alpha_white_15">#15ffffff</color>
+    <color name="color_75caf5">#75caf5</color>
+    <color name="alpha_white_10">#10ffffff</color>
+    <color name="color_5771a4">#5771a4</color>
+    <color name="color_5870a5">#5870a5</color>
+    <color name="color_f7ce02">#f7ce02</color>
+    <color name="color_eb9393">#eb9393</color>
+    <color name="color_000000">#000000</color>
+    <color name="color_405e9f">#405e9f</color>
+    <color name="color_38569c">#38569c</color>
+    <color name="color_b2bbd3">#b2bbd3</color>
+    <color name="color_95000000">#95000000</color>
+    <color name="color_99ffffff">#99ffffff</color>
+    <color name="color_ffd400">#ffd400</color>
+    <color name="color_4665a5">#4665a5</color>
+    <color name="color_c3cade">#c3cade</color>
+    <color name="controller_pannel">#5518181D</color>
+    <color name="progress_color">#ff2e4e</color>
+    <color name="content_background">#18181d</color>
+    <color name="color_f0d824">#f0d824</color>
+    <color name="color_667eb4">#667eb4</color>
+    <color name="color_617acc">#617acc</color>
+    <color name="color_dddddd">#dddddd</color>
+    <color name="color_3d76eb">#3d76eb</color>
+
+    <color name="color_dbc713">#dbc713</color>
+    <color name="color_eaae28">#eaae28</color>
+    <color name="color_9dadd6">#9dadd6</color>
+s
+    <color name="color_top_youths">#2291e6</color>
+    <color name="color_top_cartoon">#363857</color>
+
+    <color name="color_class_motto">#990f12</color>
+    <color name="color_647685">#647685</color>
+    <color name="color_7f7f7f">#7f7f7f</color>
+    <color name="color_f4b730">#f4b730</color>
+
 </resources>
