--- a/app/src/main/res/layout/fragment_set.xml
+++ b/app/src/main/res/layout/fragment_set.xml
@@ -10,8 +10,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimaryDark"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:background="@color/colorPrimaryDark">
 
         <TextView
             android:layout_width="match_parent"
@@ -20,18 +20,51 @@
             android:text="风景图"
             android:textSize="20sp" />
 
+        <!--<ImageView-->
+            <!--android:id="@+id/tongzhi"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="right"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:src="@drawable/tongzhi" />-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/imageView3"-->
+            <!--android:layout_width="22dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="left"-->
+            <!--android:layout_marginLeft="50dp"-->
+            <!--android:layout_marginTop="3dp"-->
+            <!--android:src="@drawable/sousuo" />-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/caidan"-->
+            <!--android:layout_width="33dp"-->
+            <!--android:layout_height="29dp"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:src="@drawable/caidan" />-->
+
 
     </android.support.v7.widget.Toolbar>
 
 
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="80dp"-->
+        <!--android:text="风景图"-->
+        <!--android:textSize="20sp" />-->
+
     <ImageView
-        android:id="@+id/tongzhi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="5dp"
-        android:src="@drawable/tongzhi" />
+    android:id="@+id/tongzhi"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="right"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="5dp"
+    android:src="@drawable/tongzhi" />
 
     <ImageView
         android:id="@+id/imageView3"
